# dbproject

./: .gitignore  README.md  executable.py  pyproject.toml
spe/: dataset.py  misc.py  performance_measure.py  spe.py
spe/.spyproject/config/: workspace.ini
tests/: test_spe.py
